--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <html>
+
+<head>
+    <title>Test</title>
+</head>
+
 <body>
-<script src="./index.ts"></script>
+    <script src="./src/html/throttle.ts"></script>
 </body>
+
 </html>
